--- a/tracker/transactions/templates/admin/transaction_summary_change_list.html
+++ b/tracker/transactions/templates/admin/transaction_summary_change_list.html
@@ -3,7 +3,9 @@
 {% endblock %} {% block result_list %}
 <div class="results">
   <table>
-    <h2>Buy Transactions Summary</h2>
+    <caption class="h2">
+      Buy Transactions Summary
+    </caption>
     <thead>
       <tr>
         <th>
@@ -47,7 +49,9 @@
   </table>
   <br />
   <table>
-    <h2>Sell Transactions Summary</h2>
+    <caption class="h2">
+      Sell Transactions Summary
+    </caption>
     <thead>
       <tr>
         <th>
